<resources>
    <string name="app_name">HanTok</string>
    <string name="title_home">Home</string>
    <string name="title_book">Dashboard</string>
    <string name="title_message">Notifications</string>
    <string name="learn_chinese_anytime_anywhere">Learn Chinese Anytime Anywhere</string>
    <string name="english">English</string>
    <string name="mobile_login">Mobile Login</string>
    <string name="email_login">Email Login</string>
    <string name="verification_code">Verification Code</string>
    <string name="get_the_code_again">Get the code again</string>
    <string name="don_t_have_an_account">Don’t have an account? </string>
    <string name="sign_up">Sign Up</string>
    <string name="or">Or</string>
    <string name="number">Number</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="re_send_code">重发(%d)</string>
    <string name="i_accept_the_privacy_policy_and_terms_of_service">I accept the Privacy Policy and Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="plese_input_mobile">请输入手机号</string>
    <string name="mobile_formart_fail">手机号格式不正确</string>
    <string name="please_inout_email">请输入邮箱</string>
    <string name="email_format_fail">邮箱格式不正确</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="please_input_code">请输入验证码</string>
    <string name="please_select_protocol">请先勾选隐私政策和用户协议</string>
    <string name="recorded_classes">Recorded Classes</string>
    <string name="report_task">Report task</string>
    <string name="home_work">Home work</string>
    <string name="preclass_task">Preclass Task</string>
    <string name="upcoming_classes">Upcoming Classes</string>
</resources>