<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.chnchat.client.ui.main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_book"
        android:name="com.chnchat.client.ui.main.book.BookFragment"
        android:label="@string/title_book"
        tools:layout="@layout/fragment_book" />

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.chnchat.client.ui.main.message.MessageFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_message" />
</navigation>