<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_login_bg"
    tools:context=".ui.auth.login.LoginActivity">
    <androidx.constraintlayout.widget.Group
        android:id="@+id/v_ids_mobile"
        app:constraint_referenced_ids="v_mobile_container,v_code_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/v_ids_email"
        app:constraint_referenced_ids="v_email,v_email_pwd_container"
        android:layout_width="wrap_content"
        android:visibility="invisible"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/v_tab_mobile_login"
        app:layout_constraintTop_toTopOf="@id/v_line1"
        android:layout_marginRight="12dp"
        app:layout_constraintRight_toLeftOf="@id/v_line1"
        app:layout_constraintBottom_toBottomOf="@id/v_line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile_login"
        android:textStyle="bold"
        android:textColor="#fff3f3f3"
        android:textSize="16sp"
        />

    <View
        android:id="@+id/v_line1"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="1dp"
        android:background="@color/base_white"
        android:layout_height="16dp"/>

    <TextView
        android:id="@+id/v_tab_email_login"
        app:layout_constraintTop_toTopOf="@id/v_line1"
        android:layout_marginLeft="12dp"
        app:layout_constraintLeft_toRightOf="@id/v_line1"
        app:layout_constraintBottom_toBottomOf="@id/v_line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_login"
        android:textColor="#fff3f3f3"
        android:textSize="16sp"
        />
    <EditText
        android:id="@+id/v_email"
        app:layout_constraintTop_toBottomOf="@id/v_line1"
        android:layout_marginTop="22dp"
        android:layout_marginRight="27dp"
        android:layout_marginLeft="27dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        android:background="@drawable/shape_white_r10"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_height="50dp"/>

    <LinearLayout
        android:id="@+id/v_email_pwd_container"
        app:layout_constraintTop_toBottomOf="@id/v_email"
        android:layout_marginTop="22dp"
        android:layout_marginRight="27dp"
        android:layout_marginLeft="27dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal"
        android:background="@drawable/shape_white_r10"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_height="50dp">

        <EditText
            android:id="@+id/v_email_pwd"
            android:layout_marginLeft="10dp"
            android:layout_width="0dp"
            android:background="@color/base_transparent"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColorHint="#ffababab"
            android:textSize="14sp"
            />

        <ImageView
            android:id="@+id/v_eyes"
            android:src="@mipmap/ic_eyes1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/v_mobile_container"
        app:layout_constraintTop_toBottomOf="@id/v_line1"
        android:layout_marginTop="19dp"
        android:layout_marginRight="27dp"
        android:layout_marginLeft="27dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal"
        android:background="@drawable/shape_white_r10"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/v_county_code"
            android:drawablePadding="4dp"
            android:drawableLeft="@mipmap/ic_mobile"
            android:drawableRight="@mipmap/ic_black_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="+86"
            android:textStyle="bold"
            android:textColor="#ff575757"
            android:textSize="14sp"
            />
        <EditText
            android:id="@+id/v_mobile"
            android:layout_marginLeft="10dp"
            android:inputType="phone"
            android:layout_width="0dp"
            android:background="@color/base_transparent"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:hint="@string/number"
            android:textColorHint="#ffababab"
            android:textSize="14sp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/v_code_container"
        app:layout_constraintTop_toBottomOf="@id/v_mobile_container"
        android:layout_marginTop="22dp"
        android:layout_marginRight="27dp"
        android:layout_marginLeft="27dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal"
        android:background="@drawable/shape_white_r10"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_height="50dp">

        <EditText
            android:id="@+id/v_code"
            android:layout_marginLeft="10dp"
            android:layout_width="0dp"
            android:background="@color/base_transparent"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:hint="@string/verification_code"
            android:textColorHint="#ffababab"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/v_send_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_the_code_again"
            android:textColor="#ff6fcfeb"
            android:textSize="14sp"
            />
    </LinearLayout>


    <TextView
        android:id="@+id/v_forget_pwd"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="27dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/v_email_pwd_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_your_password"
        android:textColor="#ffffffff"
        android:textSize="12sp"
        />

    <TextView
        android:id="@+id/v_login"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@id/v_forget_pwd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp"
        android:text="@string/login"
        style="@style/btStroke"/>

    <LinearLayout
        android:id="@+id/v_line2"
        android:layout_marginTop="41dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_login"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/base_white"/>
        <TextView
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textStyle="bold"
            android:textColor="#ffffffff"
            android:textSize="14sp"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/base_white"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/v_facebook"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="36dp"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintTop_toBottomOf="@id/v_line2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/v_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_facebook"/>

    <ImageView
        android:id="@+id/v_google"
        app:layout_constraintTop_toTopOf="@id/v_facebook"
        app:layout_constraintBottom_toBottomOf="@id/v_facebook"
        app:layout_constraintLeft_toRightOf="@id/v_facebook"
        app:layout_constraintRight_toLeftOf="@id/v_twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_google"/>
    <ImageView
        android:id="@+id/v_twitter"
        app:layout_constraintTop_toTopOf="@id/v_facebook"
        app:layout_constraintBottom_toBottomOf="@id/v_facebook"
        app:layout_constraintLeft_toRightOf="@id/v_google"
        app:layout_constraintRight_toLeftOf="@id/v_wechat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_twitter"/>
    <ImageView
        android:id="@+id/v_wechat"
        android:layout_marginRight="36dp"
        app:layout_constraintTop_toTopOf="@id/v_facebook"
        app:layout_constraintBottom_toBottomOf="@id/v_facebook"
        app:layout_constraintLeft_toRightOf="@id/v_twitter"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_wechat"/>

    <TextView
        android:id="@+id/v_text1"
        android:layout_marginTop="90dp"
        app:layout_constraintTop_toBottomOf="@id/v_facebook"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/v_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:text="@string/don_t_have_an_account"
        android:textStyle="bold"
        android:textColor="#ffffffff"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/v_register"
        app:layout_constraintLeft_toRightOf="@id/v_text1"
        app:layout_constraintTop_toTopOf="@id/v_text1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/v_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="#B4008D"
        android:textSize="16sp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>