<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_login_bg"
    tools:context=".ui.auth.register.RegisterActivity">
    <androidx.constraintlayout.widget.Group
        android:id="@+id/v_ids_mobile"
        app:constraint_referenced_ids="v_mobile_container,v_code_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/v_ids_email"
        app:constraint_referenced_ids="v_email,v_email_pwd_container,v_email_code_container"
        android:layout_width="wrap_content"
        android:visibility="invisible"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/v_tab_mobile_login"
        app:layout_constraintTop_toTopOf="@id/v_line1"
        android:layout_marginRight="12dp"
        app:layout_constraintRight_toLeftOf="@id/v_line1"
        app:layout_constraintBottom_toBottomOf="@id/v_line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile_login"
        android:textStyle="bold"
        android:textColor="#fff3f3f3"
        android:textSize="16sp"
        />

    <View
        android:id="@+id/v_line1"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="1dp"
        android:background="@color/base_white"
        android:layout_height="16dp"/>

    <TextView
        android:id="@+id/v_tab_email_login"
        app:layout_constraintTop_toTopOf="@id/v_line1"
        android:layout_marginLeft="12dp"
        app:layout_constraintLeft_toRightOf="@id/v_line1"
        app:layout_constraintBottom_toBottomOf="@id/v_line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_login"
        android:textColor="#fff3f3f3"
        android:textSize="16sp"
        />
    <EditText
        android:id="@+id/v_email"
        app:layout_constraintTop_toBottomOf="@id/v_line1"
        android:layout_marginTop="22dp"
        android:layout_marginRight="27dp"
        android:layout_marginLeft="27dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        android:background="@drawable/shape_white_r10"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_height="50dp"/>
    <LinearLayout
        android:id="@+id/v_email_code_container"
        app:layout_constraintTop_toBottomOf="@id/v_email"
        android:layout_marginTop="22dp"
        android:layout_marginRight="27dp"
        android:layout_marginLeft="27dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal"
        android:background="@drawable/shape_white_r10"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_height="50dp">

        <EditText
            android:id="@+id/v_email_code"
            android:layout_marginLeft="10dp"
            android:layout_width="0dp"
            android:background="@color/base_transparent"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:hint="@string/verification_code"
            android:textColorHint="#ffababab"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/v_send_email_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_the_code_again"
            android:textColor="@color/color_ff6fcfeb"
            android:textSize="14sp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/v_email_pwd_container"
        app:layout_constraintTop_toBottomOf="@id/v_email_code_container"
        android:layout_marginTop="22dp"
        android:layout_marginRight="27dp"
        android:layout_marginLeft="27dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal"
        android:background="@drawable/shape_white_r10"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_height="50dp">

        <EditText
            android:id="@+id/v_email_pwd"
            android:layout_marginLeft="10dp"
            android:layout_width="0dp"
            android:background="@color/base_transparent"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColorHint="#ffababab"
            android:textSize="14sp"
            />

        <ImageView
            android:id="@+id/v_eyes"
            android:src="@mipmap/ic_eyes1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/v_mobile_container"
        app:layout_constraintTop_toBottomOf="@id/v_line1"
        android:layout_marginTop="19dp"
        android:layout_marginRight="27dp"
        android:layout_marginLeft="27dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal"
        android:background="@drawable/shape_white_r10"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/v_county_code"
            android:drawablePadding="4dp"
            android:drawableLeft="@mipmap/ic_mobile"
            android:drawableRight="@mipmap/ic_black_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="+86"
            android:textStyle="bold"
            android:textColor="#ff575757"
            android:textSize="14sp"
            />
        <EditText
            android:id="@+id/v_mobile"
            android:layout_marginLeft="10dp"
            android:inputType="phone"
            android:layout_width="0dp"
            android:background="@color/base_transparent"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:hint="@string/number"
            android:textColorHint="#ffababab"
            android:textSize="14sp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/v_code_container"
        app:layout_constraintTop_toBottomOf="@id/v_mobile_container"
        android:layout_marginTop="22dp"
        android:layout_marginRight="27dp"
        android:layout_marginLeft="27dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal"
        android:background="@drawable/shape_white_r10"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_height="50dp">

        <EditText
            android:id="@+id/v_code"
            android:layout_marginLeft="10dp"
            android:layout_width="0dp"
            android:background="@color/base_transparent"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:hint="@string/verification_code"
            android:textColorHint="#ffababab"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/v_send_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_the_code_again"
            android:textColor="@color/color_ff6fcfeb"
            android:textSize="14sp"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/v_protocol_container"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/v_email_pwd_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/v_protocol_check"
            android:button="@drawable/select_check_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/v_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_accept_the_privacy_policy_and_terms_of_service"
            android:textColor="#ffffffff"
            android:textSize="12sp"
            android:layout_marginLeft="12dp"
            />
    </LinearLayout>


    <TextView
        android:id="@+id/v_register"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@id/v_protocol_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp"
        android:text="@string/sign_up"
        style="@style/btFull"/>


</androidx.constraintlayout.widget.ConstraintLayout>